readme.md, how to migrate & complete dependencies

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 APP_ENV=local
-APP_KEY=SomeRandomString
+APP_KEY=base64:+lH+vgHccmtGn14AnSBk23F6qD3b+Vi/bR3Zy6HJtb0=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
@@ -7,9 +7,9 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=fish_go
+DB_USERNAME=root
+DB_PASSWORD=ifrc
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
@@ -25,3 +25,6 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
+UPLOAD_FOLDER=D:\work-station\laravel-fish-go\public\upload
+FISH_CO_KEY=whalefishcomeco
