--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,11 @@
 <IfModule mod_rewrite.c>
-   RewriteEngine On 
-   RewriteRule ^(.*)$ public/$1 [L]
+	RewriteEngine On 
+
+	Options +FollowSymLinks
+	RewriteEngine On
+
+	RewriteCond %{REQUEST_FILENAME} !-d
+	RewriteCond %{REQUEST_FILENAME} !-f
+	RewriteRule ^ index.php [L]
+
 </IfModule>
