--- a/.htaccess
+++ b/.htaccess
@@ -1,11 +1,11 @@
 <IfModule mod_rewrite.c>
 	RewriteEngine On 
-
-	Options +FollowSymLinks
-	RewriteEngine On
-
-	RewriteCond %{REQUEST_FILENAME} !-d
-	RewriteCond %{REQUEST_FILENAME} !-f
+	Options All -Indexes
+	
+	#RewriteEngine On
+	#RewriteCond %{REQUEST_FILENAME} !-d
+	#RewriteCond %{REQUEST_FILENAME} !-f
+	
 	RewriteRule ^ index.php [L]
 
 </IfModule>
